# seed-simulator

./: .gitignore  LICENSE  README.md  seed-simulator.cabal
app/: Main.hs
src/: Lib.hs  Simulation.hs
