name:                seed-simulator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alibabzo/seed-simulator#readme
license:             BSD3
license-file:        LICENSE
author:              Alistair Bill
maintainer:          alistair.bill@gmail.com
copyright:           Alistair Bill 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Simulation
  build-depends:       base >= 4.7 && < 5
                     , random
                     , array
                     , split
                     , mtl
  default-language:    Haskell2010

executable seed-simulator
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , seed-simulator
  default-language:    Haskell2010

test-suite seed-simulator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , seed-simulator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alibabzo/seed-simulator
